# BiliSub

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: release-please-config.json
.github/workflows/: ci.yml  pages.yml  release-please.yml
app/: globals.css  layout.tsx  page.tsx
components/: download-panel.tsx  qr-login.tsx  subtitle-editor.tsx  subtitle-list.tsx  theme-toggle.tsx  video-input.tsx  video-page-selector.tsx
docs/: git-commit-guidelines.md
docs/diagrams/: architecture.puml  workflow.puml
docs/publishing/: browser-store-release-checklist.md  privacy-policy.md
extension/: package.json  tsconfig.json  vite.config.ts
extension/scripts/: generate-store-assets.ps1
extension/src/: manifest.ts
extension/tests/: bilibili-client.test.ts  formatters.test.ts  llm-client.test.ts  manifest.test.ts  options-app.test.tsx  options-connection.test.tsx  settings-storage.test.ts  sidepanel-app.test.tsx  sidepanel-export.test.tsx  sidepanel-summary.test.tsx  summarize.test.ts
frontend/: next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: qr-login.tsx  subtitle-editor.tsx
frontend/scripts/: sync-static.mjs
hooks/: use-subtitle-workspace.ts
lib/: limits.ts  local-api.ts  subtitles.ts
lib/server/: bilibili.ts  request.ts  session.ts
src/bili_ai_sub/: __init__.py  api_service.py  bilibili.py  cli.py  http_api.py  models.py  web.py  (+1 more)
tests/: test_bilibili_utils.py  test_client.py  test_http_api.py  test_store.py  test_web.py
(+50 files in other folders)
